--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,7 +15,7 @@ body
 	font-family: $regular-font
 	line-height: 1.25
 	overflow-x: hidden
-	background-color: #000
+	background-color: #e8e8e8
 	color: #000
 	input, textarea, select
 			border: none
@@ -48,9 +48,9 @@ button
 	overflow: hidden
 	padding: 20px 0
 	&__name
-		color: #fff
+		color: #191919
 		padding-left: 20px
-		border-left: 1px solid #e4e4e4
+		border-left: 1px solid #191919
 		float: left
 		max-width: 220px
 		font-size: 13px
@@ -58,24 +58,69 @@ button
 		max-width: 190px
 		float: left
 
+.first
+	&-ttl
+		font-family: $black-font
+		text-align: center
+		font-size: 44px
+		text-transform: uppercase
+		color: #191919
+		margin-top: 60px
+		span
+			display: block
+			margin: 0 auto
+			color: lighten(#191919, 10%)
+	&-img
+		display: table
+		margin: 0 auto
+	&-list
+		display: table
+		margin: 0 auto
+		padding-left: 0
+		margin-bottom: 0
+		list-style-type: none
+		&__item
+			display: flex
+			min-height: 200px
+			max-width: 300px
+			margin: 0 20px
+			float: left
+			background-image: url(../img/first_item_pattern.png)
+			background-size: 80% 80%
+			background-repeat: no-repeat
+			background-position: center center
+			span
+				display: block
+				margin: auto
+				font-family: $bold-font
+				text-align: center
+				background-color: #e8e8e8
+				padding: 5px 10px
+
 .main
-	min-height: calc(100vh - 92px -	127px)
-	.container
-		background-color: $accent
-		padding: 40px 0
+	background-image: url(../img/main_bg.jpg)
+	background-position: bottom center
+	background-size: cover
+	padding: 100px 0
+	position: relative
+	&:before
+		content: ''
+		width: 100%
+		height: 100%
+		background-color: rgba(#000, .8)
+		position: absolute
+		top: 0
+		left: 0
 	&__ttl
 		font-family: $bold-font
-		font-size: 28px
+		font-size: 26px
 		text-transform: uppercase
 		text-align: center
-		color: #000
+		color: #fff
 		margin-bottom: 20px
 		position: relative
 		span
-			color: #000000
-			background-color: $accent
-			display: inline-block
-			padding: 0 4px
+			color: $accent
 	&__subttl
 		font-family: $title-bold
 		text-transform: uppercase
@@ -83,37 +128,31 @@ button
 		font-size: 18px
 		color: #fff
 		display: table
-		background: #000
-		padding: 3px 8px
+		border: 2px solid #fff
+		padding: 10px
 		margin: 0 auto 20px
 	&-list
-		max-width: 600px
+		display: table
 		list-style-type: none
 		padding-left: 0
 		margin: 0 auto 20px
 		&__li
-			position: relative
-			width: 50%
+			display: flex
+			min-height: 220px
+			max-width: 330px
+			margin: 0 20px
 			float: left
-			color: #000
-			line-height: 20px
-			margin-bottom: 20px
-			padding-left: 40px
-			&.last
-				margin-bottom: 0
-			i
+			position: relative
+			background-image: url(../img/main_item.png)
+			background-size: cover
+			span
 				display: block
-				width: 30px
-				height: 30px
-				font-size: 20px
-				line-height: 30px
+				margin: auto
+				font-family: $bold-font
 				text-align: center
-				font-style: normal
-				background-color: #000
-				color: #fff
-				position: absolute
-				top: 0
-				left: 0
+				color: #191919
+				background-color: transparent
+				padding: 0 40px
 	&__btn
 		overflow: hidden
 		position: relative
@@ -125,9 +164,9 @@ button
 		text-transform: uppercase
 		line-height: 1
 		font-family: $bold-font
-		color: #fff
+		color: #000
 		border-radius: 40px
-		background-image: -webkit-linear-gradient(90deg,#000000 0,#383838 100%)
+		background-image: -webkit-linear-gradient(90deg,#f1f519 0,#dce000 100%)
 		&:before
 			content: ''
 			width: 30px
@@ -162,23 +201,16 @@ button
 			font-size: 10px
 			text-align: center
 			margin-top: 5px
-			color: $accent
+			color: #000
 	&__ico
 		max-width: 50px
 		margin: 0 auto 20px
-
-.flex
-	display: flex
-	min-height: calc(100vh - 92px -	127px) 
-	&-content
-		margin: auto
-		max-width: 100%
 
 .foot
 	padding: 20px 0
 	&__addr
 		font-family: $title-font
-		color: #fff
+		color: #191919
 		padding-left: 50px
 		position: relative
 		&:before
@@ -201,19 +233,9 @@ button
 		display: block
 		font-size: 18px
 		line-height: 22px
-		color: #fff
+		color: #191919
 		margin-bottom: 5px
 
-.thn
-	background-color: #000
-	color: #fff
-	padding: 30px
-	h3
-		font-family: $bold-font
-		text-align: center
-		font-size: 32px
-	p
-		text-align: center
 
 @keyframes slideme
 	0%
@@ -233,7 +255,7 @@ button
 		display: table-cell
 		vertical-align: middle
 		font-size: 12px
-		color: #fff
+		color: #191919
 		max-width: 140px
 	img
 		float: right
