--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,7 +15,7 @@ body
 	font-family: $regular-font
 	line-height: 1.25
 	overflow-x: hidden
-	background-color: #e8e8e8
+	background-color: #fff
 	color: #000
 	input, textarea, select
 			border: none
@@ -70,6 +70,10 @@ button
 			display: block
 			margin: 0 auto
 			color: lighten(#191919, 10%)
+			i
+				font-style: normal
+				background-color: $accent
+				padding: 5px
 	&-img
 		display: table
 		margin: 0 auto
@@ -94,7 +98,7 @@ button
 				margin: auto
 				font-family: $bold-font
 				text-align: center
-				background-color: #e8e8e8
+				background-color: #fff
 				padding: 5px 10px
 
 .main
@@ -158,7 +162,7 @@ button
 		position: relative
 		display: table
 		//max-width: 320px
-		padding: 8px 95px 8px 60px
+		padding: 12px 95px 12px 60px
 		margin: 0 auto
 		font-size: 22px
 		text-transform: uppercase
@@ -174,7 +178,7 @@ button
 			background-image: url(../img/play-button.svg)
 			background-size: cover
 			position: absolute
-			top: 11px
+			top: 16px
 			right: 25px
 			transition: all ease .3s
 		&:hover
