--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -67,13 +67,11 @@ button
 		color: #191919
 		margin-top: 60px
 		span
-			display: block
+			display: table
 			margin: 0 auto
 			color: lighten(#191919, 10%)
-			i
-				font-style: normal
-				background-color: $accent
-				padding: 5px
+			background-color: $accent
+			padding: 5px 10px
 	&-img
 		display: table
 		margin: 0 auto
