--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -158,8 +158,8 @@ button
 	&__btn
 		overflow: hidden
 		position: relative
-		display: table
-		//max-width: 320px
+		display: block
+		max-width: 401px
 		padding: 12px 95px 12px 60px
 		margin: 0 auto
 		font-size: 22px
